manifests/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: argocd
  annotations:
    argocd-image-updater.argoproj.io/image-list: imshashannk/hello-world  # Repository name
    argocd-image-updater.argoproj.io/myalias.update-strategy: latest      # Update strategy
    argocd-image-updater.argoproj.io/write-back-method: git               # Write-back method
    argocd-image-updater.argoproj.io/git-branch: main                     # Git branch
    argocd-image-updater.argoproj.io/myalias.force-update: "true"         # Force update option
    
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: imshashannk/hello-world:latest   # Use :latest tag for the latest version
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
