manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: argocd
  annotations:
    argocd-image-updater.argoproj.io/image-list: imshashannk/hello-world
    argocd-image-updater.argoproj.io/imshashannk-hello-world.update-strategy: latest
    argocd-image-updater.argoproj.io/imshashannk-hello-world.write-back-method: git
    argocd-image-updater.argoproj.io/imshashannk-hello-world.git-branch: main
    argocd-image-updater.argoproj.io/imshashannk-hello-world.force-update: "true"

spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: imshashannk/hello-world:1.0.42
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
