manifests/service.yml
# service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80         # Service port
      targetPort: 80   # Container port
      nodePort: 30080  # Optional: Specify a custom NodePort within 30000-32767
  type: NodePort
